[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ui/CardDisplay.gd" type="Script" id=1]

[node name="CardDisplay" type="Control"]
script = ExtResource( 1 )
rect_min_size = Vector2( 120, 180 )

[node name="CardBackground" type="ColorRect" parent="."]
color = Color( 0.1, 0.1, 0.1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardFrame" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0